--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -47,6 +47,10 @@
             <artifactId>spring-cloud-starter-openfeign</artifactId>
         </dependency>
         <dependency>
+            <groupId>io.github.openfeign</groupId>
+            <artifactId>feign-httpclient</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.mashibing</groupId>
             <artifactId>api-base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
