--- a/consumer/src/main/resources/application.yml
+++ b/consumer/src/main/resources/application.yml
@@ -32,6 +32,14 @@ management:
 
 ribbon:
   NFLoadBalancerRuleClassName: com.netflix.loadbalancer.RoundRobinRule
-  listOfServers: localhost:8001
-  eureka:
-    enabled: false
+#  listOfServers: localhost:8001
+#  eureka:
+#    enabled: false
+  ConnectTimeout: 1000
+  ReadTimeout: 2000
+  #同一台实例最大重试次数,不包括首次调用
+  MaxAutoRetries: 0
+  #重试负载均衡其他的实例最大重试次数,不包括首次调用
+  MaxAutoRetriesNextServer: 0
+  #是否所有操作都重试
+  OkToRetryOnAllOperations: false
