--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -50,6 +50,12 @@
             <groupId>io.github.openfeign</groupId>
             <artifactId>feign-httpclient</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>com.mashibing</groupId>
             <artifactId>api-base</artifactId>
