--- a/consumer/pom.xml
+++ b/consumer/pom.xml
@@ -57,6 +57,11 @@
         </dependency>
 
         <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-netflix-hystrix-dashboard</artifactId>
+        </dependency>
+
+        <dependency>
             <groupId>com.mashibing</groupId>
             <artifactId>api-base</artifactId>
             <version>0.0.1-SNAPSHOT</version>
