[add] 新增redis，登陆校验短信

--- a/service-verification-code/src/main/resources/application.yaml
+++ b/service-verification-code/src/main/resources/application.yaml
@@ -1,6 +1,10 @@
 spring:
   application:
     name: service-verification-code
+  redis:
+    host: 81.70.55.239
+    port: 6379
+    password: ALLFOOBAR
 
 server:
   port: 19000
@@ -8,3 +12,5 @@ server:
 eureka:
   client:
     enabled: false
+
+
