--- a/api-passenger/src/main/resources/application.yml
+++ b/api-passenger/src/main/resources/application.yml
@@ -15,6 +15,11 @@ spring:
     admin:
       client:
         url: http://127.0.0.1:8888
+  redis:
+    host: 81.70.**.***
+    port: 6379
+    password: ALLFOOBAR
+
 eureka:
   client:
     service-url:
